build/log/idf_py_stderr_output_120262
/home/pi/wifiRelay_2/main/wifiRelay.c:399:1: error: expected identifier or '(' before '}' token
  399 | }
      | ^
make[2]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/build.make:87: esp-idf/main/CMakeFiles/__idf_main.dir/wifiRelay.c.obj] Error 1
make[1]: *** [CMakeFiles/Makefile2:6157: esp-idf/main/CMakeFiles/__idf_main.dir/all] Error 2
make: *** [Makefile:149: all] Error 2
